# advent2023

./: .gitignore  README.md  flake.nix
01/: README.md  default.nix  x01.cabal
01/app/: Main.hs
01/part1/: Main.hs
01/part2/: Main.hs
01/src/: Day01.hs  Parser.hs
01/test/: Main.hs
02/: CHANGELOG.md  LICENSE  default.nix  x02.cabal
02/app/: Main.hs
02/part1/: Main.hs
02/part2/: Main.hs
02/src/: Day02.hs  Game.hs  Parser.hs
02/test/: Main.hs  TestData.hs  TestGame.hs  TestParser.hs
03/: default.nix  x03.cabal
03/app/: Main.hs
03/part1/: Main.hs
03/part2/: Main.hs
03/src/: Day03.hs  Gear.hs  Schematic.hs  Types.hs
03/test/: Main.hs  TestData.hs  TestGear.hs  TestSchematic.hs
04/: default.nix  x04.cabal
04/part1/: Main.hs
04/part2/: Main.hs
04/src/: Day04.hs  Parser.hs  Types.hs
04/test/: Main.hs  TestCard.hs  TestData.hs
05/: default.nix  x05.cabal
05/part1/: Main.hs
05/part2/: Main.hs
05/src/: Day05.hs  Parser.hs  Types.hs
06/: x06.cabal
06/src/: Types.hs
07/: .ghci  x07.cabal
07/app/: Main.hs
07/src/: Params.hs  Parser.hs  Types.hs
07/test/: Main.hs  TestTypes.hs
08/: x08.cabal
08/app/: Main.hs
08/src/: Params.hs  Parse.hs
09/: default.nix  x09.cabal
09/app/: Main.hs
