cabal-version:      3.0
name:               x01
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
        Day01
        Parser
    build-depends:
        base
        , attoparsec
        , bytestring
    hs-source-dirs:   src

executable x01
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base
        , x01
    hs-source-dirs:   app

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
        , attoparsec
        , tasty
        , tasty-hunit
        , x01
