cabal-version:      3.0
name:               x02
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
        Game
        Parser
        Day02
    build-depends:
        base ^>=4.16.4.0
        , attoparsec
        , microlens
        , bytestring
    hs-source-dirs:   src

executable x02
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x02
    hs-source-dirs:   app

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules:
        TestGame
        TestParser
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
        , attoparsec
        , bytestring
        , tasty
        , tasty-hunit
        , x02
