cabal-version:      3.0
name:               x05
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
        Parser
        Types
        Day05
    build-depends:
        base ^>=4.16.4.0
        , lens
        , attoparsec
        , bytestring
    hs-source-dirs:   src

executable part1
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        x05
    hs-source-dirs:   part1

test-suite x05-test
    import:           warnings
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x05
