cabal-version:      3.0
name:               x05
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
        Parser
        Types
        Day05
    build-depends:
        base ^>=4.16.4.0
        , attoparsec
        , bytestring
        , lens
        , split
    hs-source-dirs:   src

executable part1
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x05
    hs-source-dirs:   part1

executable part2
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x05
    hs-source-dirs:   part2
