cabal-version:      3.0
name:               x06
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  Types
    build-depends:
        base ^>=4.16.4.0
        , lens
    hs-source-dirs:   src

executable part1
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x06
    hs-source-dirs:   part1

test-suite x06-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x06
