cabal-version:      3.0
name:               x09
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

executable day9
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
    hs-source-dirs:   app
